new pics and slider

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 	<li><a class="is-active" href="#slide1" data-slide="0"></a></li>
 	<li style="display: none;"><a href="#slide2" data-slide="1"></a></li>
 	<li><a href="#slide3" data-slide="2"></a></li>
-	<li><a href="#slide4" data-slide="3"></a></li>
+<!-- 	<li><a href="#slide4" data-slide="3"></a></li>
 	<li><a href="#slide5" data-slide="4"></a></li>
-	<li><a href="#slide6" data-slide="5"></a></li>
+	<li><a href="#slide6" data-slide="5"></a></li> -->
 </ul>
 <!-- page -->
 <div id="slide0" class="page">
@@ -82,10 +82,11 @@
 <div id="slide2" class="page">
 	<a class="page__bg" href="#">
 		<div class="page__bg-in">
-			<div class="page__bg-item is-active is-loaded" data-image="img/page2.jpg" style="background-image: url(img/page2.jpg)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1920/1080" style="background-image: url(http://lorempixel.com/1920/1080)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1900/1060" style="background-image: url(http://lorempixel.com/1900/1060)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1880/1040" style="background-image: url(http://lorempixel.com/1880/1040)"></div>
+			<div class="page__bg-item is-active is-loaded" data-image="img/1.jpg" style="background-image: url(img/1.jpg)"></div>
+			<div class="page__bg-item" data-image="img/2.jpg" style="background-image: url(img/2.jpg)"></div>
+			<div class="page__bg-item" data-image="img/3.jpg" style="background-image: url(img/3.jpg)"></div>
+			<div class="page__bg-item" data-image="img/4.jpg" style="background-image: url(img/4.jpg)"></div>
+			<div class="page__bg-item" data-image="img/5.jpg" style="background-image: url(img/5.jpg)"></div>
 		</div>
 		<!-- preloader -->
 		<div class="preloader"></div>
@@ -93,14 +94,14 @@
 	<nav class="page__nav">
 		<ul>
 			<li><a href="page-tab-1" data-background="#67adda" data-backgroundmenu="#3a79a1">About Us</a></li>
-			<li><a href="page-tab-2" data-background="green" data-backgroundmenu="#3a79a1">Our Team</a></li>
-			<li><a href="page-tab-3" data-background="blue">Our Philosophy</a></li>
-			<li><a href="page-tab-4" data-background="green">Our Mission</a></li>
-			<li><a href="page-tab-5" data-background="red">Our Clients</a></li>
+			<li><a href="page-tab-2" data-background="#8159af" data-backgroundmenu="#644686">Our Team</a></li>
+			<li><a href="page-tab-3" data-background="#94835a" data-backgroundmenu="#746542">Our Philosophy</a></li>
+			<li><a href="page-tab-4" data-background="#716b9f" data-backgroundmenu="#4c4774">Our Mission</a></li>
+			<li><a href="page-tab-5" data-background="#905b5b" data-backgroundmenu="#704040">Our Clients</a></li>
 		</ul>
 	</nav>
 	<div class="page__content">
-		<div class="page__content-bg" style="background: green"></div>
+		<div class="page__content-bg" style="background: #67adda"></div>
 		<div id="page-tab-1" class="page__content-in">
 			<div class="title">About Us</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
@@ -125,99 +126,7 @@
 	<!-- preloader -->
 	<!-- <div class="preloader"></div> -->
 </div>
-<!-- page -->
-<div id="slide3" class="page">
-	<a class="page__bg" href="#">
-		<div class="page__bg-in">
-			<div class="page__bg-item is-active is-loaded" data-image="img/page2.jpg" style="background-image: url(img/page2.jpg)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1920/1080" style="background-image: url(http://lorempixel.com/1920/1080)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1900/1060" style="background-image: url(http://lorempixel.com/1900/1060)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1880/1040" style="background-image: url(http://lorempixel.com/1880/1040)"></div>
-		</div>
-		<!-- preloader -->
-		<div class="preloader"></div>
-	</a>
-	<nav class="page__nav">
-		<ul>
-			<li><a href="page-tab-21" data-background="red">About Us</a></li>
-			<li><a href="page-tab-22" data-background="pink">Our Team</a></li>
-			<li><a href="page-tab-23" data-background="blue">Our Philosophy</a></li>
-			<li><a href="page-tab-24" data-background="black">Our Mission</a></li>
-			<li><a href="page-tab-25" data-background="white">Our Clients</a></li>
-		</ul>
-	</nav>
-	<div class="page__content">
-		<div class="page__content-bg" style="background: green"></div>
-		<div id="page-tab-21" class="page__content-in">
-			<div class="title">About Us</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-22" class="page__content-in">
-			<div class="title">Our Team</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-23" class="page__content-in">
-			<div class="title">Our Philosophy</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-24" class="page__content-in">
-			<div class="title">Our Mission</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-25" class="page__content-in">
-			<div class="title">Our Clients</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-	</div>
-	<!-- preloader -->
-	<!-- <div class="preloader"></div> -->
-</div>
-<!-- page -->
-<div id="slide4" class="page">
-	<a class="page__bg" href="#">
-		<div class="page__bg-in">
-			<div class="page__bg-item is-active is-loaded" data-image="img/page2.jpg" style="background-image: url(img/page2.jpg)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1920/1080" style="background-image: url(http://lorempixel.com/1920/1080)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1900/1060" style="background-image: url(http://lorempixel.com/1900/1060)"></div>
-			<div class="page__bg-item" data-image="http://lorempixel.com/1880/1040" style="background-image: url(http://lorempixel.com/1880/1040)"></div>
-		</div>
-		<!-- preloader -->
-		<div class="preloader"></div>
-	</a>
-	<nav class="page__nav">
-		<ul>
-			<li><a href="page-tab-31">About Us</a></li>
-			<li><a href="page-tab-32">Our Team</a></li>
-			<li><a href="page-tab-33">Our Philosophy</a></li>
-			<li><a href="page-tab-34">Our Mission</a></li>
-			<li><a href="page-tab-35">Our Clients</a></li>
-		</ul>
-	</nav>
-	<div class="page__content">
-		<div id="page-tab-31" class="page__content-in">
-			<div class="title">About Us</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-32" class="page__content-in">
-			<div class="title">Our Team</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-33" class="page__content-in">
-			<div class="title">Our Philosophy</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-34" class="page__content-in">
-			<div class="title">Our Mission</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-		<div id="page-tab-35" class="page__content-in">
-			<div class="title">Our Clients</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
-	</div>
-	<!-- preloader -->
-	<!-- <div class="preloader"></div> -->
-</div>
+
 <!-- footer -->
 <footer id="slide5" class="footer">
 	<div class="footer__text">Premium Travel and Concierge Services.</div>
