--- a/index.html
+++ b/index.html
@@ -103,24 +103,34 @@
 	<div class="page__content">
 		<div class="page__content-bg" style="background: #67adda"></div>
 		<div id="page-tab-1" class="page__content-in">
+			<div class="centerme">
 			<div class="title">About Us</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+			</div>
 		</div>
 		<div id="page-tab-2" class="page__content-in">
+			<div class="centerme">
 			<div class="title">Our Team</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+			</div>
 		</div>
 		<div id="page-tab-3" class="page__content-in">
+			<div class="centerme">
 			<div class="title">Our Philosophy</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+			</div>
 		</div>
 		<div id="page-tab-4" class="page__content-in">
+			<div class="centerme">
 			<div class="title">Our Mission</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+			</div>
 		</div>
 		<div id="page-tab-5" class="page__content-in">
+			<div class="centerme">
 			<div class="title">Our Clients</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+			</div>
 		</div>
 	</div>
 	<!-- preloader -->
