--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <!--[if gt IE 8]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="initial-scale=1"/>
+	<title>Miami Exclusive</title>
+	<meta name="viewport" content="width=1100">
 	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
